Bug 78883 - layout loop on particular .docx file Because of Deletion of para line spacing prop from style.xml
Summary: layout loop on particular .docx file Because of Deletion of para line spacing...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: BSA target:4.4.0 target:4.3.0.0.beta2
Keywords: bibisectRequest, regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-05-19 06:50 UTC by Tushar Bende
Modified: 2024-07-16 15:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
File for which this issue can be reproduced (18.11 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 11:29 UTC, Tushar Bende
Details
File 2 for which this issue can be reproduced (90.84 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 11:30 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-05-19 06:50:53 UTC
Problem description: While Opening Document in LO,Lo getting hang.

Steps to reproduce:
1. Try to Open file in LibreOffice

Expected Result:
The file should open properly.

Actual Result:
File Hangs LibreOffice writer on open.


              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 tommy27 2014-05-19 08:25:53 UTC
please define exactly your O/S and copy and paste the exact information about your 4.3 build from menu help.
Comment 2 retired 2014-05-19 10:44:06 UTC
Could you attach a test file or does this issue apply to all files opened with LO?

Tushar, since you've been very active lately, I'm sure you have some plan for this bug and how to proceed?
Comment 3 Tushar Bende 2014-05-19 11:29:28 UTC
Created attachment 99326 [details]
File for which this issue can be reproduced
Comment 4 Tushar Bende 2014-05-19 11:30:30 UTC
Created attachment 99328 [details]
File  2 for which this issue can be reproduced
Comment 5 Tushar Bende 2014-05-19 11:34:10 UTC
@tommy27, Foss : I was analysing set of Documents out of which some has this issue.I am done with my check for the attached documents issue can be reproduced.

I have tested on following Builds:

Windows build:
Version: 4.3.0.0.alpha1+
Build ID: dd0f844728a53a337233a3c687b792e725803da5
TinderBox: Win-x86@42, Branch:master, Time: 2014-05-19_06:36:39


Ubantu Build:

Version: 4.3.0.0.alpha1+
Build ID: f0f3e791c1ff318a3d7122576d0fc469a4c78064
Comment 6 Joel Madero 2014-05-20 04:42:15 UTC
At least a problem since 4.2.4.2 release - updating version.

@Tushar - version is the oldest version that we see the problem. Not the latest (we just use comments for that)
Comment 7 Joel Madero 2014-05-20 04:56:17 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.3.0.0.alpha0
Date:   Thu Apr 24 21:43:16 2014 +0300
Platform :Ubuntu 14.04
DE: GNOME3

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Major - file can't be opened at all
Highest - regression (might even be a minor release regression) + relatively simple document (just a big table it seems)

Keywords - regression


+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 8 Joel Madero 2014-05-20 04:56:59 UTC
 4669cebd3a50da166d6fb73f8d298cd5e14dcf9e is the first bad commit
commit 4669cebd3a50da166d6fb73f8d298cd5e14dcf9e
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Wed Nov 27 12:53:21 2013 +0000

    source-hash-9ab89a7599f79092027ae86b5b4cd0e3d67b8b4d
    
    commit 9ab89a7599f79092027ae86b5b4cd0e3d67b8b4d
    Author:     I-Jui (Ray) Sung <ray@multicorewareinc.com>
    AuthorDate: Fri Nov 15 19:47:42 2013 -0600
    Commit:     I-Jui (Ray) Sung <ray@multicorewareinc.com>
    CommitDate: Fri Nov 15 19:51:51 2013 -0600
    
        GPU Calc: an attempt to fix compilation error on Darwin
    
        Change-Id: I282ef4732f72d76baf647bb039847e8d7b3fd562

:100644 100644 bb7178a58d2139ee35c4604a7711d6211f87feca 32fa585001df434240320a3188b85328734f168f M	ccache.log
:100644 100644 3b24f5d7d0d9d477986e4bf174bfd3e0c0f1c3be 60fcca70b03648ec12d7a16d527362c8357d6c3f M	commitmsg
:100644 100644 478a01c7e9204b3866a5119fbc6bb2b6a9e2636a 2a3cb9544e42e4d7b0c3c0c9107567bd40bf8be0 M	make.log
:040000 040000 7021244699cbf2dfa92ce43d49c9ef8c143af050 1b2ed934a149f26dedcdf9d1b0f77007263f8cd7 M	opt



# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [8092559c5013969ebda017d79200463b9b975038] source-hash-fd84daf696a368c2c7561b5253b32a63ecdeca4a
git bisect good 8092559c5013969ebda017d79200463b9b975038
# good: [0270ef1b76a6de423b30f7927362cc01c1a0fc38] source-hash-b1f7dd66b898b03cb4bd8d434b6370310ea95946
git bisect good 0270ef1b76a6de423b30f7927362cc01c1a0fc38
# skip: [ddb123cad22440994cd332d9985dd9558fd07e07] source-hash-647fb29f528b891a1c92846640f7865f5c1fbe7f
git bisect skip ddb123cad22440994cd332d9985dd9558fd07e07
# skip: [9d357dc6201f7cd91448595e0a3f89dfdae81946] source-hash-2304beaca33c63b94df99cb827716f00ce259f9a
git bisect skip 9d357dc6201f7cd91448595e0a3f89dfdae81946
# good: [ef72aa34cf4ee6399b192de28708d621c9680a50] source-hash-7e07a45500dcbb891a85f0bc9b7049cf4d50bba1
git bisect good ef72aa34cf4ee6399b192de28708d621c9680a50
# good: [2472598a0b04eef3038d56137f27dc6dc1edf9e5] source-hash-5050dfc73f194d1d59222cac72e69a917655d816
git bisect good 2472598a0b04eef3038d56137f27dc6dc1edf9e5
# skip: [b25c77bc097fa4cc84f59ebdd34011bafbb3a770] source-hash-660800d6f33a01ad53fc0f5717e1c33868440d2f
git bisect skip b25c77bc097fa4cc84f59ebdd34011bafbb3a770
# skip: [b25c77bc097fa4cc84f59ebdd34011bafbb3a770] source-hash-660800d6f33a01ad53fc0f5717e1c33868440d2f
git bisect skip b25c77bc097fa4cc84f59ebdd34011bafbb3a770
# good: [89c7af972191d30321e9503b6454e8b1570ee3e8] source-hash-0aa9ced531b8d85ad067c1d156a9708eea628d78
git bisect good 89c7af972191d30321e9503b6454e8b1570ee3e8
# good: [89c7af972191d30321e9503b6454e8b1570ee3e8] source-hash-0aa9ced531b8d85ad067c1d156a9708eea628d78
git bisect good 89c7af972191d30321e9503b6454e8b1570ee3e8
# skip: [8bd734b6642f44d6876b227c0678f2be60425082] source-hash-c1f416feda0ef4ef215ca587b9bac03659b48c7a
git bisect skip 8bd734b6642f44d6876b227c0678f2be60425082
# good: [9bce3024c675da4777cf206f8d913ebba8c7ed2b] source-hash-a1aea9418f860595641da8dcc971f656eaacf8a3
git bisect good 9bce3024c675da4777cf206f8d913ebba8c7ed2b
# good: [9bce3024c675da4777cf206f8d913ebba8c7ed2b] source-hash-a1aea9418f860595641da8dcc971f656eaacf8a3
git bisect good 9bce3024c675da4777cf206f8d913ebba8c7ed2b
# bad: [48451c9dbaa00d5ee1e41c992b2bb7d3ba62c343] source-hash-3dab6fcbedf21c1d2971527f6f99fa46d3d45514
git bisect bad 48451c9dbaa00d5ee1e41c992b2bb7d3ba62c343
# bad: [48451c9dbaa00d5ee1e41c992b2bb7d3ba62c343] source-hash-3dab6fcbedf21c1d2971527f6f99fa46d3d45514
git bisect bad 48451c9dbaa00d5ee1e41c992b2bb7d3ba62c343
# good: [af0230d2482513f1f8ba2949faa501444669e09a] source-hash-868103846b9b32bfecd77c08055fdca69d0265c2
git bisect good af0230d2482513f1f8ba2949faa501444669e09a
# good: [af0230d2482513f1f8ba2949faa501444669e09a] source-hash-868103846b9b32bfecd77c08055fdca69d0265c2
git bisect good af0230d2482513f1f8ba2949faa501444669e09a
# bad: [4669cebd3a50da166d6fb73f8d298cd5e14dcf9e] source-hash-9ab89a7599f79092027ae86b5b4cd0e3d67b8b4d
git bisect bad 4669cebd3a50da166d6fb73f8d298cd5e14dcf9e
# bad: [4669cebd3a50da166d6fb73f8d298cd5e14dcf9e] source-hash-9ab89a7599f79092027ae86b5b4cd0e3d67b8b4d
git bisect bad 4669cebd3a50da166d6fb73f8d298cd5e14dcf9e
# good: [d9d52d1f2fe0de3b8629926f0a316a70a533fb40] source-hash-ad74354c92787cc35eff9aa7d72d447676cb01ac
git bisect good d9d52d1f2fe0de3b8629926f0a316a70a533fb40
# first bad commit: [4669cebd3a50da166d6fb73f8d298cd5e14dcf9e] source-hash-9ab89a7599f79092027ae86b5b4cd0e3d67b8b4d
Comment 9 tommy27 2014-05-20 05:04:48 UTC
tested under Win7x64

File 1 .docx can be loaded wth no issue in 4.1.5 final release but hangs with 4.2.0 final, hence early 4.2.x regression

File 2 .docx hangs both with 4.1.5 and 4.2.0 release so we are dealing with a different issue.

I suggest to create a separate report for File 2.
Comment 10 tommy27 2014-05-20 05:17:37 UTC
I did that. See Bug 78939.

file 1 is a regression of 4.2.x
while file 2 a regression of 4.0.x
Comment 11 tommy27 2014-05-20 05:36:42 UTC
marked File2 as obsolete to avoid confusion between the 2 bugs
Comment 12 Tushar Bende 2014-05-20 05:37:27 UTC
@Tommy27 : Thanks for your comments.Added doc 2 to Bug#78939.
Comment 13 Tushar Bende 2014-05-20 05:39:37 UTC
@Joel Madero : Thanks for your analysis and commit id which might be responsible for this issue.I will look into it.

I have one question how you found out this exact bad commit? Is there any script which we need to run on set of soffice executables?
Comment 14 Joel Madero 2014-05-20 05:40:38 UTC
A bibisect would be awesome - I've already done over 10 tonight so I need to get some zzz's before bed. If someone has the time to bibisect, please do so :)

https://wiki.documentfoundation.org/QA/HowToBibisect

You'll have to use the 42all package to get this one
Comment 15 Joel Madero 2014-05-20 05:41:12 UTC
I mean a bibisect of the one that isn't bibisected of course - I think I'm tired :)
Comment 16 Joel Madero 2014-05-20 05:42:18 UTC
@Tushar - in general we try to get the person who broke it to fix it. If you're unable to resolve it please remove yourself from the "assigned to" (that means your telling other developers that you are currently working on fixing the problem so they will not look at it).

Thanks all, goodnight !
Comment 17 Tushar Bende 2014-05-20 05:45:55 UTC
Joel Madero : I would like to give it a try ..If I do not find issue I will remove    my name from assignee and would contact the person who is responsible. :)
Comment 18 Joel Madero 2014-05-20 14:58:20 UTC
Wanted to add - bibisect does not say exactly what commit broke it. It narrows it down to a range which you can then get a list from gerret and try to figure out which in the range broke things :) I don't want you to get mislead that I've identified the exact patch
Comment 19 Vinaya Mandke 2014-05-22 09:22:44 UTC
(In reply to comment #18)
> Wanted to add - bibisect does not say exactly what commit broke it. It
> narrows it down to a range which you can then get a list from gerret and try
> to figure out which in the range broke things :) I don't want you to get
> mislead that I've identified the exact patch

Hi Joel,
Is there a daily bibisect repo available to download for 4.3?
Comment 20 Joel Madero 2014-05-22 14:04:22 UTC
if it's present in 4.2 you'll want to use the 42all package
Comment 21 Joel Madero 2014-05-22 14:22:08 UTC
I should have clarified here ;) So you need the package that contains the commit where the bug was introduced. So in this case it appears like the bug is present in 4.2.0.4 release which means 42all contains that range of commits.

There is a 4.3 packages: https://wiki.documentfoundation.org/QA/HowToBibisect#Versions

43only contains everything from the last commit in 42all - very recent (just a couple days ago).

Hope that helps :)
Comment 22 Tushar Bende 2014-05-23 06:02:57 UTC
Thanks Joel for all ur explaination we will try to identify bad patch for our all issue documents.
Can you tell me where can I get 4.1 windows build.

Couldn't find here http://dev-builds.libreoffice.org/daily/libreoffice-4-1/

(In reply to comment #21)
> I should have clarified here ;) So you need the package that contains the
> commit where the bug was introduced. So in this case it appears like the bug
> is present in 4.2.0.4 release which means 42all contains that range of
> commits.
> 
> There is a 4.3 packages:
> https://wiki.documentfoundation.org/QA/HowToBibisect#Versions
> 
> 43only contains everything from the last commit in 42all - very recent (just
> a couple days ago).
> 
> Hope that helps :)
Comment 23 Michael Stahl (allotropia) 2014-05-26 12:31:41 UTC
looks like this one had some bad luck:

commit 9fbdb2b8a71e195ac2aa68740e66e84316b08ed7
Author:     PriyankaGaikwad <priyanka.gaikwad@synerzip.com>
AuthorDate: Fri Nov 15 18:29:22 2013 +0530
Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
CommitDate: Fri Nov 15 18:24:26 2013 +0100

    Fixed for spacing between lines in table is getting preserve.


well i don't really think this should be a regression,
the layout loop was there before, just this particular
file happened not to trigger it.
Comment 24 Tushar Bende 2014-05-27 11:31:57 UTC
Michael Stahl: thanks for finding out the commit causing problem.

I am checking all related code changes and will modify the code for the correct fix.
Comment 25 Commit Notification 2014-05-30 19:13:48 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=489611732319dec36ec630f6bfffd0c6ff03b9bf

fdo#78883: Writer getting Hang while opening document



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Michael Stahl (allotropia) 2014-05-30 19:19:53 UTC
very well, Tushar has found a tweak to the import filter that helps!
Comment 27 Commit Notification 2014-05-30 20:19:13 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d9b607664f25c206c37dc3e9a68e94e55bd272c1&h=libreoffice-4-3

fdo#78883: Writer getting Hang while opening document


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 28 Robinson Tryon (qubit) 2015-12-17 08:10:59 UTC
Migrating Whiteboard tags to Keywords: (bibisectrequest)
[NinjaEdit]
Comment 29 Alex Pyrgiotis 2024-07-16 11:57:08 UTC
I'd like to report that LibreOffice has regressed, and opening this file hangs once more.

Tested on: Arch Linux, Alpine Linux
Version: LibreOffice 7.6.7.2 60(Build:2)
Comment 30 Stéphane Guillou (stragu) 2024-07-16 15:46:59 UTC
(In reply to Alex Pyrgiotis from comment #29)
> I'd like to report that LibreOffice has regressed, and opening this file
> hangs once more.
Please open a new report, mentioning attachment 99326 [details] and bug 78883 in it.
It is most likely a different problem.
(And please test with version 24.2 at least, as 7.6 won't see further fixes.)